--- a/gym.css
+++ b/gym.css
@@ -15,7 +15,8 @@ html {
   align-items: center;
   font-family: "Poppins", sans-serif;
   height: 83px;
-  position: sticky;
+  position: fixed;
+  top: 0px;
   /* overflow: hidden; */
 }
 .logo img {
@@ -135,7 +136,7 @@ nav ul li:hover {
 }
 
 .dietim:hover {
-  rotate: 4 2 3 360deg;
+  rotate: 1 2 1 360deg;
   background-color: white;
   box-shadow: -5px -5px 2px black;
 }
@@ -259,13 +260,4 @@ footer{
   background:url(images/bubble.jpg) center center/cover;
   /* position: absolute; */
 
-}
-
-#trainer::before{
-  content: "";
-  background: url(images/bubble.jpg) center center/cover;
-  height: 100%;
-  position: absolute;
-  z-index: -1;
-  opacity: 0.8;
 }
